fixed the module

--- a/backend/convertorFunction/CMakeLists.txt
+++ b/backend/convertorFunction/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.4)
-project(Pybind11)
+project(convertorFunction)
 add_subdirectory(pybind11)
-pybind11_add_module(module_name main.cpp)
+pybind11_add_module(string_to_JSX main.cpp)
